# nave

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  pyproject.toml  rust-toolchain.toml  zensical.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: CI.yml  docs.yml
.just/: docs_links.just  docs_nav.just  docs_snippets.just
crates/nave/: Cargo.toml
crates/nave/src/: commands.rs  main.rs
crates/nave/src/commands/: build.rs  check.rs  discover.rs  distil.rs  fetch.rs  init.rs  pen.rs  pull.rs  scan.rs  schemas.rs  search.rs  validate.rs
crates/nave/tests/: smoke.rs
crates/nave_build/: Cargo.toml
crates/nave_build/src/: antiunify.rs  fca.rs  lib.rs  report.rs
crates/nave_check/: Cargo.toml
crates/nave_check/src/: lib.rs
crates/nave_config/: Cargo.toml
crates/nave_config/src/: address.rs  cache.rs  file_filter.rs  lib.rs  match_pred.rs  matcher.rs  paths.rs  term.rs
crates/nave_config/src/address/: selector.rs
crates/nave_core/: Cargo.toml
crates/nave_core/src/: lib.rs
crates/nave_discover/: Cargo.toml
crates/nave_discover/src/: lib.rs
crates/nave_distil/: Cargo.toml
crates/nave_distil/src/: antiunify.rs  factor.rs  lib.rs  report.rs  value.rs
crates/nave_fetch/: Cargo.toml
crates/nave_fetch/src/: git.rs  lib.rs  plan.rs
crates/nave_github/: Cargo.toml
crates/nave_github/src/: auth.rs  client.rs  lib.rs  models.rs
crates/nave_parse/: Cargo.toml
crates/nave_parse/src/: lib.rs
crates/nave_pen/: Cargo.toml
crates/nave_pen/src/: create.rs  lib.rs  ops.rs  rewrite.rs  rewrite_state.rs  state.rs  storage.rs  walk.rs
crates/nave_pull/: Cargo.toml
crates/nave_pull/src/: git.rs  lib.rs  plan.rs
crates/nave_rewrite/: Cargo.toml
crates/nave_rewrite/src/: apply.rs  lib.rs  op.rs  plan.rs  report.rs
crates/nave_scan/: Cargo.toml
crates/nave_scan/src/: lib.rs
crates/nave_schemas/: Cargo.toml
crates/nave_schemas/src/: action.rs  id.rs  lib.rs  registry.rs  tracked.rs
crates/nave_search/: Cargo.toml
crates/nave_search/src/: holes.rs  lib.rs
crates/nave_validate/: Cargo.toml
crates/nave_validate/src/: lib.rs
docs/: index.md  lifecycle.md
docs/_snippets/cli/: build.txt  check.txt  init.txt  nave.txt  pen.txt  pull.txt  scan.txt  schemas.txt  search.txt
docs/_snippets/cli/pen/: clean.txt  create.txt  exec.txt  list.txt  reinit.txt  revert.txt  rewrite.txt  rm.txt  show.txt  status.txt  sync.txt
docs/_snippets/cli/schemas/: list.txt  pull.txt  validate.txt
docs/assets/stylesheets/: extra.css
docs/concepts/: cache.md  cli-model.md  config-model.md  config.md  core-primitives.md  fleet-model.md  fleet.md  operations.md  pen-lifecycle.md  pens.md  primitives.md  queries.md  query-language-spec.md  query-language.md  rewrites.md  schemas.md  state-model.md  templates.md
docs/examples/: binding-surveillance.md  binding-upkeep.md  drift-analysis.md  lower-bound-rollout.md  pen-workflow.md  real-world.md  search-fleet.md  task-based.md
docs/lifecycle/: flow.md  invariants.md  overview.md  stages.md  state-flow.md
docs/reference/cli/: build.md  check.md  command-flow.md  init.md  nave.md  overview.md  pen.md  pull.md  relationships.md  scan.md  schemas.md  search.md
docs/reference/cli/pen/: clean.md  close.md  create.md  exec.md  list.md  merge.md  open.md  prune.md  reinit.md  revert.md  rewrite.md  rm.md  run.md  show.md  status.md  sync.md
docs/reference/cli/schemas/: list.md  pull.md  validate.md
python/nave/: __init__.py  __main__.py  _find_nave.py
src/nave/: __init__.py
