[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.95"
homepage = "https://github.com/lmmx/nave"
documentation = "https://github.com/lmmx/nave"
repository = "https://github.com/lmmx/nave"
authors = ["Louis Maddox <louismmx@gmail.com>"]
license = "MIT"

[workspace.dependencies]
nave = { path = "crates/nave" }
nave_core = { path = "crates/nave_core" }

anyhow = { version = "1.0.80" }
clap = { version = "4.5.3", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "fat"
codegen-units = 16
