[profile.release]
lto = "fat"
codegen-units = 16

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
nave = {path = "crates/nave"}
nave_config = {path = "crates/nave_config"}
nave_github = {path = "crates/nave_github"}
nave_scan = {path = "crates/nave_scan"}
nave_pull = {path = "crates/nave_pull"}
nave_parse = {path = "crates/nave_parse"}
nave_check = {path = "crates/nave_check"}
nave_build = {path = "crates/nave_build"}
nave_search = {path = "crates/nave_search"}
nave_schemas = {path = "crates/nave_schemas"}
nave_pen = {path = "crates/nave_pen"}
anyhow = {version = "1.0.80"}
clap = {version = "4.5.3", features = ["derive"]}
indicatif = {version = "0.17"}
figment2 = {version = "0.11", features = ["toml", "env"]}
jsonschema = {version = "0.46", default-features = false, features = ["resolve-http", "tls-aws-lc-rs"]}
globset = {version = "0.4"}
serde = {version = "1.0", features = ["derive"]}
toml = {version = "0.8"}
# Use rustls to avoid OpenSSL headaches on CI/various OSes
reqwest = {version = "0.13", features = ["query", "json", "gzip"]}
tokio = {version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "sync"]}
serde_json = {version = "1.0"}
serde_norway = {version = "0.9"}
time = {version = "0.3", features = ["serde-well-known", "formatting", "parsing", "macros"]}
dirs = {version = "5"}
dialoguer = {version = "0.11"}
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
thiserror = {version = "1"}
futures = {version = "0.3"}
regex = {version = "1"}
odis = {version = "2026.4.0"}
bit-set = {version = "0.8.0"}

[workspace.lints.clippy]
pedantic = {level = "warn", priority = -2}
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.package]
edition = "2024"
rust-version = "1.95"
homepage = "https://github.com/lmmx/nave"
documentation = "https://github.com/lmmx/nave"
repository = "https://github.com/lmmx/nave"
authors = ["Louis Maddox <louismmx@gmail.com>"]
license = "AGPL-3.0-only"
