[[bin]]
name = "nave"
path = "src/main.rs"

[dependencies]
nave_config = {workspace = true}
nave_github = {workspace = true}
nave_scan = {workspace = true}
nave_pull = {workspace = true}
nave_check = {workspace = true}
nave_build = {workspace = true}
nave_parse = {workspace = true}
nave_schemas = {workspace = true}
nave_search = {workspace = true}
nave_pen = {workspace = true}
anyhow = {workspace = true}
clap = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
dialoguer = {workspace = true}
serde = {workspace = true}
toml = {workspace = true}
reqwest = {workspace = true}
serde_json = {workspace = true}

[dev-dependencies]
cargo-husky = {version = "1.5.0", default-features = false, features = ["user-hooks"]}

[lints]
workspace = true

[package]
name = "nave"
version = "0.0.5"
description = "Fleet-level modelling and operations for OSS package repos"
readme = "../../README.md"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
