[dependencies]
nave_config = {workspace = true}
nave_parse = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}

[lints]
workspace = true

[package]
name = "nave_build"
version = "0.0.5"
description = "Anti-unification over tracked config files"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
