[dependencies]
nave_config = {workspace = true}
nave_parse = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}

[lints]
workspace = true

[package]
name = "nave_check"
version = "0.0.7"
description = "Round-trip validation of tracked config files"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
