[package]
name = "nave_config"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration and cache paths for nave"

[dependencies]
anyhow = { workspace = true }
figment2 = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
globset = { workspace = true }

[lints]
workspace = true
