[dependencies]
anyhow = {workspace = true}
figment2 = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
toml = {workspace = true}
dirs = {workspace = true}
thiserror = {workspace = true}
time = {workspace = true}
globset = {workspace = true}

[lints]
workspace = true

[package]
name = "nave_config"
version = "0.0.5"
description = "Configuration and cache paths for nave"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
