[package]
name = "nave_core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for the nave fleet-ops tool"

[dependencies]

[lints]
workspace = true