[dependencies]
nave_config = {workspace = true}
anyhow = {workspace = true}
futures = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}

[lints]
workspace = true

[package]
name = "nave_fetch"
version = "0.0.2"
description = "Sparse-checkout fetcher for scaned repos"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
