[package]
name = "nave_github"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "GitHub REST client for nave"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true