[dependencies]
anyhow = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
time = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
thiserror = {workspace = true}
futures = {workspace = true}

[lints]
workspace = true

[package]
name = "nave_github"
version = "0.0.7"
description = "GitHub REST client for nave"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
