[package]
name = "nave_parse"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "Generic parse + round-trip for tracked config files"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_norway = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true