[dependencies]
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_norway = {workspace = true}
thiserror = {workspace = true}
toml = {workspace = true}

[lints]
workspace = true

[package]
name = "nave_parse"
version = "0.0.8"
description = "Generic parse + round-trip for tracked config files"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
