[dependencies]
nave_config = {workspace = true}
nave_search = {workspace = true}
nave_scan = {workspace = true}
nave_github = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
futures = {workspace = true}
toml = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
time = {workspace = true}
dirs = {workspace = true}

[lints]
workspace = true

[package]
name = "nave_pen"
version = "0.0.6"
description = "Pen model and operations for nave"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
