[dependencies]
nave_config = {workspace = true}
nave_github = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
time = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
futures = {workspace = true}

[lints]
workspace = true

[package]
name = "nave_scan"
version = "0.0.4"
description = "Repository scan for nave"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
