[dependencies]
nave_config = {workspace = true}
nave_parse = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_norway = {workspace = true}
reqwest = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
thiserror = {workspace = true}
jsonschema = {workspace = true}

[lints]
workspace = true

[package]
name = "nave_schemas"
version = "0.0.5"
description = "Schema caching and config validation for nave"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
